syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu.sergio.pix_keymanager_grpc.protobuf";
option objc_class_prefix = "PKS";

package br.com.zup.edu.sergio.pix_keymanager_grpc.protobuf;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service PixKeyCreationService {
  rpc CreatePixKey(PixKeyCreationRequest) returns (PixKeyCreationResponse) {}
}

service PixKeyReadingService {
  rpc ReadOnePixKey(PixKeyReadingOneRequest) returns (PixKeyReadingOneResponse) {}
}

service PixKeyDeletionService {
  rpc DeletePixKey(PixKeyDeletionRequest) returns (google.protobuf.Empty) {}
}

message PixKeyCreationRequest {
  KeyType type = 1;
  string key = 2;
  string client_id = 3;
  AccountType account_type = 4;
}

message PixKeyCreationResponse {
  string pix_id = 1;
}

message PixKeyReadingOneRequest {
  string client_id = 1;
  string pix_id = 2;
  string pix_key = 3;
}

message PixKeyReadingOneResponse {
  string pix_id = 1;
  string client_id = 2;
  KeyType key_type = 3;
  string key = 4;
  Account account = 5;

  message Account {
    Client client = 1;
    string institution = 2;
    string branch = 3;
    string number = 4;
    AccountType account_type = 5;
    google.protobuf.Timestamp creation = 6;

    message Client {
      string name = 1;
      string national_registry_id = 2;
    }
  }
}

message PixKeyDeletionRequest {
  string pix_id = 1;
  string client_id = 2;
}


enum AccountType {
  ACCOUNT_TYPE_UNSPECIFIED = 0;
  ACCOUNT_TYPE_CHECKING = 1;
  ACCOUNT_TYPE_SAVINGS = 2;
}

enum KeyType {
  KEY_TYPE_UNSPECIFIED = 0;
  KEY_TYPE_CPF = 1;
  KEY_TYPE_PHONE = 2;
  KEY_TYPE_EMAIL = 3;
  KEY_TYPE_RANDOM = 4;
  KEY_TYPE_CNPJ = 5;
}
